@@ -1,3 +1,6 @@
+Tue Jul 15 13:57:46 MET DST 1997: hannes
+        * added call to proc in from standard.lib in tesths.cc
+
 Wed Jul  9 17:50:23 MET DST 1997: hannes/siebert
         * added new type (resolution)
         -> extra.cc, ipid.cc, iparith.cc, ipconv.cc, syz.h, syz1.cc
